2014-06-11	SilverNexus
	* parseArgs.c: Added support for log message suppression.
	* settings.h: Added setting for log message suppression.
	* settings.c: Default suppression level is below INFO.
	* ErrorLog.c: Check minimum print level before printing log message.

2014-06-11	SilverNexus
	* main.c: Add functionality that times the search.

2014-06-09	SilverNexus
	* settings.h: Add field for length of search string.
	* settings.c: Initialize search string length.
	* parseArgs.c: Calculate length at assignment of search string.
	* search.c: Remove old length calculation in every line searched.

2014-06-05	SilverNexus
	* Makefile.am,
	* configure.ac,
	* autogen.sh: use autotools as part of build process

-----------------------------------------------------------------------------------------
                                      Changes for 0.01
-----------------------------------------------------------------------------------------

2014-06-04	SilverNexus
	* ErrorLog.c: Make a FATAL error exit the program directly.
	* main.c: Register free_settings with atexit library function.
	* parseArgs.c: Change exit(0) to exit(EXIT_SUCCESS).

2014-06-03	SilverNexus
	* parseArgs.h: Add a function prototype for a universal help message.
	* parseArgs.c: Move the help message to its own function.
	* main.c: Make improper argument usage cause the program to print help and exit.

2014-05-29	SilverNexus
	* settings.h: Add field to store minimum log level that writes to file.
	* settings.c: Set default minimum log level to WARNING.
	* parseArgs.c: Add -l and --loglevel flags to valid flags.
	* ErrorLog.c: Add parsing to evaluate log level.
	* main.c, dir_list.c, ErrorLog.h, search.c: Change name of logging function.
	* Makefile: Change optimization to -Ofast.

2014-05-23	SilverNexus
	* settings.h: Add output_file field for custom output file location.
	* settings.c: Set a default value for output_file.
	* parseArgs.c: Add information and parsing for -o and --output flags.