@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                                 main.c                                  */
-/* Original code written by Daniel Hawkins. Last modified on 2014-06-11.   */
+/* Original code written by Daniel Hawkins. Last modified on 2014-06-12.   */
 /*                                                                         */
 /* The file defines the main function and several searching functions.     */
 /*                                                                         */
@@ -42,7 +42,10 @@ int main(int argc, char *argv[]){
         time_t end_time = time(0);
         // Don't give the logger a chance to repress this message, so just print from here
         printf("Search completed in %i seconds.\n", (int)(end_time - start_time));
-        printf("The matches have been stored in %s.\n", settings.output_file);
+        if (fopen(settings.output_file, "r"))
+            printf("The matches have been stored in %s.\n", settings.output_file);
+        else
+            puts("No matches were found.");
         exit(EXIT_SUCCESS);
     }
     else{
